// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea TextArea com label 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TextArea
    label="Teste"
    name="teste"
    placeholder="Teste"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": <textarea
        className="textarea"
        label="Teste"
        name="teste"
        placeholder="Teste"
/>,
      "label": "Teste",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "className": "textarea",
        "label": "Teste",
        "name": "teste",
        "placeholder": "Teste",
      },
      "ref": null,
      "rendered": null,
      "type": "textarea",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": <textarea
          className="textarea"
          label="Teste"
          name="teste"
          placeholder="Teste"
/>,
        "label": "Teste",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "className": "textarea",
          "label": "Teste",
          "name": "teste",
          "placeholder": "Teste",
        },
        "ref": null,
        "rendered": null,
        "type": "textarea",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`TextArea TextArea sem label 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TextArea />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": <textarea
        className="textarea"
        name={undefined}
        placeholder={undefined}
/>,
      "label": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "className": "textarea",
        "name": undefined,
        "placeholder": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": "textarea",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": <textarea
          className="textarea"
          name={undefined}
          placeholder={undefined}
/>,
        "label": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "className": "textarea",
          "name": undefined,
          "placeholder": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": "textarea",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
